manifest/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: story-poker
  namespace: random-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: story-poker
  template:
    metadata:
      labels:
        app: story-poker
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: story-poker
          image: ghcr.io/jmaasy/story-poker:c197283f5af213e65554814a55478b9dacf26b15
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: story-poker
  namespace: random-services
spec:
  selector:
    app: story-poker
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: story-poker
  namespace: random-services
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "86400"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "86400"
    nginx.ingress.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/use-proxy-protocol: "true"
    nginx.ingress.kubernetes.io/proxy-real-ip-cidr: "0.0.0.0/0"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
      proxy_set_header X-Real-IP $remote_addr;
spec:
  ingressClassName: nginx
  rules:
  - host: storypoker.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: story-poker
            port:
              number: 80
